mongo-express/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: local-testing
  labels:
    app: mongo-express
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: local-testing
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
