mongo-express/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: local-testing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mongo-express.rnssolutions.com
      secretName: mongo-express-certificate
  rules:
    - host: mongo-express.rnssolutions.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
            path: /
